<resources>
    <string name="app_name">NearbyChat</string>
    <string name="not_compatible">This app is unfortunately not compatible with your device.</string>
    <string name="request_gps">"NearbyChat" needs activated GPS.</string>
    <string name="request_permissions">"NearbyChat" needs all required permissions.</string>
    <string name="ok">OK</string>

    <string name="available">available</string>
    <string name="chats">chats</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="available_desc">available users nearby</string>
    <string name="chats_desc">saved chats</string>
    <string name="chat_desc">your chat with a user</string>
    <string name="profile_desc">your NearbyChat profile</string>
    <string name="settings_desc">settings for the app</string>

    <string name="message">message</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="name_label">name:</string>
    <string name="description_label">description:</string>
    <string name="color_label">color:</string>
    <string name="save">save</string>
    <string name="saved_profile">saved profile</string>
    <string name="profile_parts_empty">name and description can not be empty</string>
    <string name="theme_label">theme:</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">light mode</string>
    <string name="language_label">language:</string>
    <string name="language_en">english</string>
    <string name="language_de">german</string>
    <string name="system_default">system default</string>
    <string name="language_hint">hint: Language settings are applied after restart of the app.</string>
    <string name="deleted_chat">deleted chat.</string>
    <string name="undo">undo</string>

    <string name="time_pattern">HH:mm</string>
    <string name="date_pattern">MM/dd/yyyy</string>

    <string name="notification_shutdown">Click to shutdown app</string>

    <string name="error_name_missing">[name missing]</string>
    <string name="error_desc_missing">[description missing]</string>
    <string name="error_message_missing">[message missing]</string>
    <string name="error_time_missing">[time missing]</string>
    <string name="error_date_missing">[date missing]</string>
</resources>