<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settins_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.view.MainActivity">

    <ScrollView
        android:id="@+id/settings_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/theme_label" />

            <RadioGroup
                android:id="@+id/settings_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <RadioButton
                    android:id="@+id/settings_theme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode" />

                <RadioButton
                    android:id="@+id/settings_theme_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light_mode" />

                <RadioButton
                    android:id="@+id/settings_theme_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/language_label" />

            <RadioGroup
                android:id="@+id/settings_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <RadioButton
                    android:id="@+id/settings_language_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language_en" />

                <RadioButton
                    android:id="@+id/settings_language_de"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language_de" />

                <RadioButton
                    android:id="@+id/settings_language_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/language_hint" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>