<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/chat_user_signal_strength"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/chat_user_message"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_signal_wifi_0_bar_24" />

    <ImageView
        android:id="@+id/chat_user_symbol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/chat_user_message"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_chat_24" />

    <TextView
        android:id="@+id/chat_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/error_name_missing"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/chat_user_signal_strength"
        app:layout_constraintStart_toEndOf="@+id/chat_user_symbol"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chat_user_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_desc_missing"
        app:layout_constraintEnd_toEndOf="@+id/chat_user_name"
        app:layout_constraintStart_toStartOf="@+id/chat_user_name"
        app:layout_constraintTop_toBottomOf="@+id/chat_user_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_messages_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/chat_new_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_user_message">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/chat_new_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chat_send_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chat_send_message" />

    <ImageButton
        android:id="@+id/chat_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_send_24" />

</androidx.constraintlayout.widget.ConstraintLayout>